--- a/Module 2.1/template/template.html
+++ b/Module 2.1/template/template.html
@@ -2,11 +2,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Hi</title>
-    <link href="C:\Users\lukja\PycharmProjects\Contest3\template\style.css" rel="stylesheet">
+    <link href="C:\Users\lukja\PycharmProjects\Module 2.1\template\style.css" rel="stylesheet">
 </head>
 <body>
 <h1>Аналитика по зарплатам и городам для профессии {{ prof_name}}</h1>
-<img src='C:\Users\lukja\PycharmProjects\Contest3\report\{{first}}'>
+<img src='C:\Users\lukja\PycharmProjects\Module 2.1\report\{{first}}'>
 <h2>Статистика по годам</h2>
 <table class="by-year">
     <thead>
